# komenasne

./: .gitignore  README.md  SPEC.md  komenasne.bat  komenasne.ini  komenasne.ini.example  komenasne.py  komenasne_fixrec.bat  komenasne_recerror.bat  komenasne_silent.vbs  komenasne_task_setup.bat  post_template.txt  pyproject.toml
.github/workflows/: release.yml
src/: build.bat  channellist.py  get_twitter_key.py  komenasne.bat  komenasne.ini  komenasne.py  komenasne.spec  makeexe.bat  my_channel_list.py  nx_kako_log.py  requirements.txt  setup.bat
src/common/: __init__.py  channel_list.py  nasne_discovery.py
web/: index.html
