[project]
name = "komenasne"
version = "3.1.0b1"
description = "nasneの動画再生と連動してニコニコ実況の過去ログを再生するツール"
requires-python = ">=3.12"
authors = [{ name = "kamm" }]
dependencies = [
    "requests>=2.31",
    "python-dateutil>=2.8",
    "atproto>=0.0.55",
    # Windows には IANA タイムゾーンDBが無いため zoneinfo に必須
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 120
target-version = "py312"
